--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "vectortilepattern",
   "version": "1.0.0",
   "description": "template for creating vector tiles",
-  "main": "index.html",
+  "main": "map.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
